--- a/src/App.css
+++ b/src/App.css
@@ -57,12 +57,29 @@
   text-align: center;
 }
 
+.Player {
+  top: 0;
+  left: 0;
+}
 /* zz */
+img {
+  width: 120px;
+  height: 120px;
+  border-radius: 30%;
+  object-fit: cover;
+  margin-top: -1%;
+}
+
+.Top1 {
+  margin-left: 80%;
+  margin-bottom: 65.5%;
+}
+
 .Kiki {
   font-size: 20px;
   color: rgb(27, 26, 27);
   font-weight: 800;
-  margin-top: 100px;
+  margin-top: -63%;
   margin-left: 46.8%;
   display: flex;
   flex-direction: column;
@@ -118,10 +135,10 @@ p {
 }
 
 .Container {
-  border: 10px solid rgb(27, 26, 27) !important;
+  border: 11px solid rgb(27, 26, 27) !important;
   height: 600px;
-  width: 388px;
-  margin-left: -255px;
+  width: 390px;
+  margin-left: -157px;
   bottom: 15px;
 }
 
@@ -129,8 +146,8 @@ p {
   font-size: 20px;
   color: rgb(27, 26, 27);
   font-weight: 800;
-  bottom: 90px;
-  /* margin-left: -9%; */
+  bottom: 40px;
+  margin-left: 33%;
   display: flex;
   flex-direction: column;
 }
