--- a/src/Footer.css
+++ b/src/Footer.css
@@ -4,5 +4,5 @@
   justify-content: center;
   font-size: 40px;
   /* margin-right: 30px; */
-  background-color: #8f4af7;
+  background-color: #f23c7e;
 }
