--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,9 @@ App {
   font-size: 3vh;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.45);
 }
+.Dropdown {
+  margin-top: -54px;
+}
 
 .DropdownMenu {
   display: flex;
@@ -154,7 +157,7 @@ p {
 }
 
 .Container {
-  border: 11px solid#f23c7e !important;
+  border: 11px solid#8f4af7 !important;
   height: 600px;
   width: 390px;
   margin-left: -157px;
