--- a/src/App.css
+++ b/src/App.css
@@ -79,22 +79,17 @@ App {
   text-align: center;
 }
 
-.Player {
-  top: 0;
-  left: 0;
-}
-/* zz */
 img {
   width: 120px;
   height: 120px;
   border-radius: 30%;
   object-fit: cover;
-  margin-top: -1%;
+  margin-top: 1%;
 }
 
 .Top1 {
   margin-left: 80%;
-  margin-bottom: 65.5%;
+  margin-bottom: 55.5%;
 }
 
 .Kiki {
@@ -298,6 +293,7 @@ span {
 }
 h1 {
   position: absolute;
-  top: 10%;
-  left: -9.9%;
+  top: 23%;
+  left: -4.9%;
+  font-size: 28px;
 }
